[metadata]
name = sphinx-autosummary-dhsegment
version = 1.0
description = Sphinx extension to automatically generate autosummary tables for dh_segment_torch config
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelBarman/sphinx-autosummary-dhsegment
author = raphaelbarman
author_email = raphael.barman@epfl.ch
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Sphinx
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    License :: GPL V3

[options]
py_modules = sphinx_autosummary_dhsegment
python_requires = >= 3.7
install_requires =
  sphinx
